# ollive-assistant

./: .dockerignore  .env.example  .env.production  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.space  Makefile  PRD.md  README.md  ROADMAP.md  SECURITY.md  STUDY_GUIDE.md  SUBMISSION_EMAIL.txt  docker-compose.yml  ollive.db  requirements.txt  space_README.md  space_app.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: pyproject.toml
backend/app/: __init__.py  database.py  dependencies.py  main.py  metrics.py  models.py
backend/app/repositories/: audit.py  conversation.py  eval.py  feedback.py  message.py
backend/app/routers/: admin.py  chat.py  conversations.py  evaluations.py  feedback.py  files.py  health.py
backend/app/tools/: code_execution.py  search.py
backend/frontier_assistant/: app.py  model.py  tools.py
backend/guardrails/: filter.py  llamaguard.py
backend/migrations/: env.py
backend/migrations/versions/: 149737829b66_add_details_to_eval_results.py  68f9e29251e4_initial_schema.py  7774cccd5fc2_add_routing_reason_to_message.py
backend/ollive_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/oss_assistant/: __init__.py  memory.py  model.py
backend/shared/: __init__.py
backend/tests/: test_api.py  test_budget_alert.py  test_code_execution.py  test_database.py  test_eval_caching.py  test_evaluation_db.py  test_files.py  test_llamaguard.py  test_oss_model.py  test_pdf_report.py  test_router.py  test_search.py
(+34 files in other folders)
