[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "venv*", ".venv*"]

[project]
name = "ollive-backend"
version = "0.1.0"
description = "FastAPI backend for Ollive Intelligent AI Gateway"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.28",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "alembic>=1.13.1",
    "sqlite-vec>=0.1.0",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "openai>=1.14.1",
    "transformers>=4.38.2",
    "torch>=2.2.1",
    "accelerate>=0.27.2",
    "langfuse>=2.13.3",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "migrations"]
